--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "react-icons": "^4.7.1",
     "react-resizable-panels": "^3.0.6",
     "react-router-dom": "^6.8.1",
+    "react-scripts": "^5.0.1",
     "recharts": "^3.5.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
