--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
   },
   "dependencies": {
     "@emailjs/browser": "^4.4.1",
-    "@prisma/client": "^7.1.0",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.8",
@@ -45,7 +44,6 @@
     "lucide-react": "^0.561.0",
     "next": "^16.0.10",
     "next-themes": "^0.4.6",
-    "prisma": "^7.1.0",
     "react": "^18.2.0",
     "react-day-picker": "^9.12.0",
     "react-dom": "^18.2.0",
@@ -73,6 +71,7 @@
     "eslint-plugin-react-refresh": "^0.3.4",
     "postcss": "^8.5.6",
     "tailwindcss": "^4.1.18",
+    "typescript": "^4.9.5",
     "vite": "^4.1.0"
   }
 }
