Fix image import path (move to src/assets)

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,13 +1,19 @@
+Dockerfile
+.dockerignore
 node_modules
-build
+npm-debug.log
+README.md
 .next
 .git
-.gitignore
-*.log
-local-*
-Dockerfile
 package-lock.json
 yarn.lock
 pnpm-lock.yaml
 test
-README.md
+*.log
+local-*
+
+node_modules
+build
+.git
+.gitignore
+Dockerfile
