--- a/package.json
+++ b/package.json
@@ -73,5 +73,17 @@
     "tailwindcss": "^4.1.18",
     "typescript": "^4.9.5",
     "vite": "^4.1.0"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   }
 }
