--- a/package.json
+++ b/package.json
@@ -35,6 +35,8 @@
     "@radix-ui/react-toast": "^1.2.15",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "ajv": "^8.12.0",
+    "ajv-keywords": "^5.1.0",
     "class-variance-authority": "^0.7.1",
     "cmdk": "^1.1.1",
     "emailjs-com": "^3.2.0",
@@ -61,10 +63,11 @@
   "devDependencies": {
     "@tailwindcss/postcss": "^4.1.18",
     "@types/node": "^25.0.1",
+    "@types/range-parser": "^1.2.7",
     "@types/react": "^18.3.27",
     "@types/react-dom": "^18.3.7",
     "@vitejs/plugin-react": "^3.1.0",
-    "autoprefixer": "^10.4.22",
+    "autoprefixer": "^10.4.23",
     "eslint": "^8.35.0",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
